@@ -6,3 +6,5 @@ filename = lib/Sys/Domainname.pm6
 
 [PruneFiles]
 ; match = ^ 'xt/'
+
+[UploadToZef]
